Fixed video autoplay on mobiles

--- a/components/media-slider/media-slider.module.scss
+++ b/components/media-slider/media-slider.module.scss
@@ -18,7 +18,6 @@
   }
 
   video {
-    @apply object-fill;
     @apply h-100%;
   }
 }
